--- a/Flixeek/app/build.gradle
+++ b/Flixeek/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+    annotationProcessor 'com.jakewharton:butterknife:7.0.1'
 }
